--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <main>
 	<head>
-		<script src="tree.js"></script>
+		<script src="sources/tree.js"></script>
 	</head>
 	<style>
 		* {
@@ -18,7 +18,7 @@
   	<body onload='run()' style='background:#000015'>
 		<div align="center" class="box">
     		<canvas id='scene' width='500px' height='500px' style='background:#000015'></canvas>
-    		<a href="https://totobird.totobird.repl.co"><img style="position: top: 0; right: 0; border: 0;" src="xmasTag.png" alt="Merry Christmas!"></a>
+    		<a href="https://totobird.totobird.repl.co"><img style="position: top: 0; right: 0; border: 0;" src="sources/xmasTag.png" alt="Merry Christmas!"></a>
 		</div>
   	</body>
 </main>
