--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <main>
 	<head>
-		<script src="sources/tree.js"></script>
+		<script src="js/index.js"></script>
 	</head>
 	<style>
 		* {
