--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
 
   	<body onload='run()' style='background:#000015'>
 		<div align="center" class="box">
-    		<canvas id='scene' width='500px' height='500px' style='background:#000015'></canvas>
-    		<a href="https://totobird.cf"><img style="position: top: 0; right: 0; border: 0;" src="sources/xmasTag.png" alt="Merry Christmas!"></a>
+    			<canvas id='scene' width='500px' height='500px' style='background:#000015'></canvas>
+    			<a href="https://totobird.cf"><img style="position: top: 0; right: 0; border: 0;" src="sources/xmasTag.png" alt="Merry Christmas!"></a>
 		</div>
+		<iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/141461047/?autostart=false" frameborder="0" allowfullscreen></iframe>
+">
   	</body>
 </main>
 </html>
