--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title Home>
+<title>Home</title>
 <main>
 	<head>
 		<script src="js/index.js"></script>
@@ -21,7 +21,6 @@
     			<canvas id='scene' width='500px' height='500px' style='background:#000015'></canvas>
     			<aahref="https://totobird.cf"><img style="position: top: 0; right: 0; border: 0;" src="sources/xmasTag.png" alt="Merry Christmas!"></a>
 		</div>
-		meowmeowmeow
   	</body>
 </main>
 </html>
