--- a/404.html
+++ b/404.html
@@ -89,7 +89,7 @@
 <b><em>PageUnfoundError: requested url refused connection</em></b></span>
 <br>
 
-<span style="color: #105510">// <a href="totobird.cf/"><span style="color: #105510">Return Home</a></span>
+<span style="color: #105510">// <a href="http://totobird.cf"><span style="color: #105510">Return Home</a></span>
 <br>
 
 </p>
