--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Home</title>
 <main>
 	<head>
-		<script src="js/index.js"></script>
+		<script src="js/tree.js"></script>
 	</head>
 	<style>
 		* {
