--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			margin: 0;
 		}
 		div.box {
+			position: relative;
 			margin: 100px;
 			background-color: #FFFFFF;
 		}
@@ -19,7 +20,7 @@
   	<body onload='run()' style='background:#000015'>
 		<div align="center" class="box">
     			<canvas id='scene' width='500px' height='500px' style='background:#000015'></canvas>
-    			<aahref="https://totobird.cf"><img style="position: top: 0; right: 0; border: 0;" src="sources/xmasTag.png" alt="Merry Christmas!"></a>
+    			<aahref="https://totobird.cf"><img style="position: absolute; top: 0; right: 0; border: 0;" src="sources/xmasTag.png" alt="Merry Christmas!"></a>
 		</div>
   	</body>
 </main>
