--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		div.box {
 			position: relative;
 			margin: 100px;
-			width: 500;
+			width: 500px;
 			background-color: #FFFFFF;
 		}
   	</style>
