--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 		div.box {
 			position: relative;
 			margin: 100px;
-			width: 500px;
-			background-color: #FFFFFF;
+			width: 525px;
+			height: 525px;
+			background-color: #33DD33;
 		}
   	</style>
 
