--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   	<body onload='run()' style='background:#000015'>
 		<div align="center" class="box">
     			<canvas id='scene' width='500px' height='500px' style='background:#000015'></canvas>
-    			<aahref="https://totobird.cf"><img style="position: absolute; top: 0; right: 0px; border: 0;" src="sources/xmasTag.png" alt="Merry Christmas!"></a>
+    			<aahref="https://totobird.cf"><img style="position: absolute; top: 0px; right: 25px; border: 0;" src="sources/xmasTag.png" alt="Merry Christmas!"></a>
 		</div>
   	</body>
 </main>
