--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		}
 		div.box {
 			position: relative;
-			align: center;
+			align="center";
 			margin: 100px;
 			width: 525px;
 			height: 525px;
