--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 		}
 		div.box {
 			position: relative;
-			align="center";
 			margin: 100px;
 			width: 525px;
 			height: 525px;
@@ -21,7 +20,7 @@
   	</style>
 
   	<body onload='run()' style='background:#000015'>
-		<div class="box">
+		<div align="center" class="box">
     			<canvas id='scene' width='500px' height='500px' style='background:#000015'></canvas>
     			<aahref="https://totobird.cf"><img style="position: absolute; top: 12.5px; right: 12.5px; border: 0;" src="sources/xmasTag.png" alt="Merry Christmas!"></a>
 		</div>
