--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		}
 		div.box {
 			position: relative;
+			left: 50%;
 			margin: 100px;
 			width: 525px;
 			height: 525px;
@@ -21,7 +22,7 @@
 
   	<body onload='run()' style='background:#000015'>
 		<div align="center" class="box">
-    			<canvas id='scene' left: '50%' width='500px' height='500px' style='background:#000015; margin:12.5px;'></canvas>
+    			<canvas id='scene' width='500px' height='500px' style='background:#000015; margin:12.5px;'></canvas>
     			<aahref="https://totobird.cf"><img style="position: absolute; top: 12.5px; right: 12.5px; border: 0;" src="sources/xmasTag.png" alt="Merry Christmas!"></a>
 		</div>
   	</body>
