--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 		}
 		div.box {
 			position: relative;
-			left: 15%;
+			margin-left: auto;
+			margin-right: auto;
 			margin: 100px;
 			width: 525px;
 			height: 525px;
