--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 		}
 		div.box {
 			position: relative;
-			margin-left: auto;
-			margin-right: auto;
+			margin: 0 auto;
 			margin: 100px;
 			width: 525px;
 			height: 525px;
