--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 		}
 		div.box {
 			position: relative;
-			margin: 0 auto;
+			margin: 100px;
+			text-align: center;
 			width: 525px;
 			height: 525px;
 			background-color: #33DD33;
