--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		div.box {
 			position: relative;
 			margin: 0 auto;
+			border: 100px;
 			text-align: center;
 			width: 525px;
 			height: 525px;
