--- a/index.html
+++ b/index.html
@@ -22,11 +22,10 @@
   	</style>
 
   	<body onload='run()' style='background:#000015'>
-		<p>
-		<span style="color: #ccccff;">Happy Holidays!</span></p>
+		<p align="center"><font size="+5"><span style="color: #ccccff;">Happy Holidays!</span></font></p>
 		<div align="center" class="box">
     			<canvas id='scene' width='500px' height='500px' style='background:#000015; margin:12.5px;'></canvas>
-    			<aahref="https://totobird.cf"><img style="position: absolute; top: 12.5px; right: 12.5px; border: 0;" src="sources/xmasTag.png" alt="Merry Christmas!"></a>
+    			<aahref="https://totobird.cf"><img style="position: absolute; top: -12px; right: -12px; border: 0;" src="sources/xmasTag.png" alt="Merry Christmas!"></a>
 		</div>
   	</body>
 </main>
