--- a/index.html
+++ b/index.html
@@ -10,22 +10,37 @@
 			padding: 0;
 			margin: 25px;
 		}
-		div.box {
+		div.boxGrn {
 			position: relative;
 			margin: 0 auto;
 			border: 100px;
 			text-align: center;
+			display: block;
 			width: 525px;
 			height: 525px;
 			background-color: #33DD33;
 		}
+		div.boxNvy {
+			position: relative;
+			margin: 0 auto;
+			border: 100px;
+			text-align: center;
+			display: block;
+			width: 525px;
+			height: 525px;
+			background-color: #000015;
+		}
   	</style>
 
-  	<body onload='run()' style='background:#000015'>
+  	<body onload='run()'; style='background:#000015;';>
 		<p align="center"><font size="+5"><span style="color: #ccccff;">Happy Holidays!</span></font></p>
-		<div align="center" class="box">
-    			<canvas id='scene' width='500px' height='500px' style='background:#000015; margin:12.5px;'></canvas>
-    			<aahref="https://totobird.cf"><img style="position: absolute; top: -12px; right: -12px; border: 0;" src="sources/xmasTag.png" alt="Merry Christmas!"></a>
+		<div align="center" class="boxGrn">
+    			<canvas id='scene'; width='500px'; height='500px' style='background:#000015; margin:12.5px;'></canvas>
+    			<aahref="https://totobird.cf"><img style="position: absolute; top: -12px; right: -12.5px; border: 0;" src="sources/xmasTag.png" alt="Merry Christmas!"></a>
+		</div>
+		<p></p>
+		<div align="center"; class="boxNvy"; background-color: #000015;>
+			<iframe src="candle.html"; width="500px"; height="520px";></iframe>
 		</div>
   	</body>
 </main>
