--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
 			<p align="center"><font size="+5"><span style="color: #ccccff;">Happy Holidays!</span></font></p>
 			<div align="center" class="boxChr">
     				<canvas id='scene'; width='500px'; height='520px' style='background:#000015; margin:12.5px;'></canvas>
-    				<img style="position: absolute; top: -10px; right: -4px; border: 0;" src="sources/xmasTag.png" alt="Merry Christmas!">
+    				<img style="position: absolute; top: -12px; right: -0px; border: 0;" src="sources/xmasTag.png" alt="Merry Christmas!">
 			</div>
 			<p></p>
 			<div align="center"; class="boxHnk"; background-color: #000015;>
 				<iframe src="candle.html"; width="500px"; height="520px";></iframe>
-				<img style="position: absolute; top: -1px; right: -2px; border: 0;" src="sources/hanukkaTag.png" alt="Happy Hanukka!">
+				<img style="position: absolute; top: -10x; right: -4px; border: 0;" src="sources/hanukkaTag.png" alt="Happy Hanukka!">
 			</div>
   		</body>
 	</main>
