--- a/index.html
+++ b/index.html
@@ -10,17 +10,7 @@
 				padding: 0;
 				margin: 25px;
 			}
-			div.boxChr {
-				position: relative;
-				margin: 0 auto;
-				border: 100px;
-				text-align: center;
-				display: block;
-				width: 550px;
-				height: 570px;
-				background-color: #33DD33;
-			}
-			div.boxHnk {
+			div.box {
 				position: relative;
 				margin: 0 auto;
 				border: 100px;
@@ -34,12 +24,12 @@
 
   		<body onload='run()'; style='background:#000015;';>
 			<p align="center"><font size="+5"><span style="color: #ccccff;">Happy Holidays!</span></font></p>
-			<div align="center" class="boxChr">
+			<div align="center" class="box">
     				<canvas id='scene'; width='500px'; height='520px' style='background:#000015; margin:12.5px;'></canvas>
     				<img style="position: absolute; top: -12px; right: -0px; border: 0;" src="sources/xmasTag.png" alt="Merry Christmas!">
 			</div>
 			<p></p>
-			<div align="center"; class="boxHnk"; background-color: #000015;>
+			<div align="center"; class="box"; background-color: #000015;>
 				<iframe src="candle.html"; width="500px"; height="520px";></iframe>
 				<img style="position: absolute; top: 0x; right: -4px; border: 0;" src="sources/hanukkaTag.png" alt="Happy Hanukka!">
 			</div>
