--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-	<iframe src="http://audio-previews.elements.envatousercontent,com/files/112318467/preview.mp3" loop="true" hidden="false" autostart="true"></iframe>
+	<iframe src="http://audio-previews.elements.envatousercontent.com/files/112318467/preview.mp3" loop="true" hidden="true" autostart="true"></iframe>
 	<title>Home</title>
 	<main>
 		<head>
