--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-	<iframe src="http://audio-previews.elements.envatousercontent.com/files/112318467/preview.mp3" loop="true" hidden="true" autostart="true"></iframe>
 	<title>Home</title>
 	<main>
 		<head>
@@ -32,7 +31,7 @@
 			<p></p>
 			<div align="center"; class="box"; background-color: #000015;>
 				<iframe src="candle.html"; width="500px"; height="520px";></iframe>
-				<img style="position: absolute; top: 0x; right: -4px; border: 0;" src="sources/hanukkaTag.png" alt="Happy Hanukka!">
+				<img style="position: absolute; top: -0.5px; right: -0px; border: 0;" src="sources/hanukkaTag.png" alt="Happy Hanukka!">
 			</div>
   		</body>
 	</main>
