--- a/403.html
+++ b/403.html
@@ -32,11 +32,11 @@
 <span style="color: #995599;">if</span>
 <span style="color: #dddddd;"> browser</span>
 <span style="color: #888888;">.</span>
-<em><span style="color: #dddddd;">pageFound</span></em>
+<em><span style="color: #dddddd;">requestSatisfied</span></em>
 <span style="color: #888888;">(</span>
 <span style="color: #bbcc00;">page</span>
 <span style="color: #888888;">)</span>
-<span style="color: #dddddd;"> != </span>
+<span style="color: #dddddd;"> == </span>
 <span style="color: #3366ff;">True</span>
 <span style="color: #dddddd;">:</span>
 <br>
@@ -86,7 +86,7 @@
 <span style="color: #992525;">Returned error: 403
 <br>
 
-<b><em>RequestUnsatisfiedError: requested url refused connection</em></b></span>
+<b><em>RequestUnsatisfiedError: request unsatisfied by requested url</em></b></span>
 <br>
 
 <span style="color: #105510">// <a href="http://totobird.cf"><span style="color: #105510">Return Home</a></span>
