--- a/terminal/index.html
+++ b/terminal/index.html
@@ -1,5 +1,5 @@
-<head><script src="script.js"></script></head>
-<style src="style.css"></style>
+<head><script src="terminal/script.js"></script></head>
+<style src="terminal/style.css"></style>
 
 <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro:200' rel='stylesheet' type='text/css'>
 <div class="container">
