--- a/terminal.html
+++ b/terminal.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
      <head>	
-           <meta http-equiv="Refresh" content="0; url="s.codepen.io/toto-bird/debug/WLpXRJ/VGAWNwXQZjer/" />
+           <!--meta http-equiv="Refresh" content="0; url="s.codepen.io/toto-bird/debug/WLpXRJ/VGAWNwXQZjer/" /-->
      </head>
      <body>
              <p>Please follow <a href="s.codepen.io/toto-bird/debug/WLpXRJ/VGAWNwXQZjer/">this link</a>.</p>
