--- a/terminal.html
+++ b/terminal.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
      <head>	
-           <meta http-equiv="refresh" content="0; url=http://s.codepen.io/toto-bird/debug/WLpXRJ/VGAWNwXQZjer/" />
+           <meta http-equiv="refresh" content="0; url=s.codepen.io/toto-bird/debug/WLpXRJ/VGAWNwXQZjer/" />
      </head>
      <body>
-             <p>Please follow <a href="http://s.codepen.io/toto-bird/debug/WLpXRJ/VGAWNwXQZjer/">this link</a>.</p>
+             <p>Please follow <a href="s.codepen.io/toto-bird/debug/WLpXRJ/VGAWNwXQZjer/">this link</a>.</p>
       </body>
 </html>
