--- a/terminal.html
+++ b/terminal.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
      <head>	
-           <meta http-equiv="refresh" content="0; url=s.codepen.io/toto-bird/debug/WLpXRJ/VGAWNwXQZjer/" />
+           <script>
+                location.replace("http://s.codepen.io/toto-bird/debug/WLpXRJ/VGAWNwXQZjer")
+           </script>
      </head>
      <body>
              <p>Please follow <a href="s.codepen.io/toto-bird/debug/WLpXRJ/VGAWNwXQZjer/">this link</a>.</p>
