--- a/terminal.html
+++ b/terminal.html
@@ -2,7 +2,7 @@
 <html>
      <head>	
            <script>
-                location.replace("http://s.codepen.io/toto-bird/debug/WLpXRJ/VGAWNwXQZjer")
+                location.replace("\rhttp://s.codepen.io/toto-bird/debug/WLpXRJ/VGAWNwXQZjer")
            </script>
      </head>
      <body>
