--- a/terminal.html
+++ b/terminal.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
      <head>	
-           <script>
-                location.replace("\rhttp://s.codepen.io/toto-bird/debug/WLpXRJ/VGAWNwXQZjer")
-           </script>
+           <!--<script>
+                location.replace("http://s.codepen.io/toto-bird/debug/WLpXRJ/VGAWNwXQZjer")
+           </script>-->
      </head>
      <body>
              <p>Please follow <a href="s.codepen.io/toto-bird/debug/WLpXRJ/VGAWNwXQZjer/">this link</a>.</p>
