--- a/terminal.html
+++ b/terminal.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-     <head>	
+     <!--<head>	
            <!--<script>
                 location.replace("http://s.codepen.io/toto-bird/debug/WLpXRJ/VGAWNwXQZjer")
            </script>-->
-     </head>
+     </head>-->
      <body>
              <p>Please follow <a href="s.codepen.io/toto-bird/debug/WLpXRJ/VGAWNwXQZjer/">this link</a>.</p>
       </body>
