--- a/terminal.html
+++ b/terminal.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-     <!--<head>	
+     <head>	
            <script>
-                location.replace("http://s.codepen.io/toto-bird/debug/WLpXRJ/VGAWNwXQZjer")
+                location.replace("http:s//s.codepen.io/toto-bird/debug/WLpXRJ/VGAWNwXQZjer")
            </script>
-     </head>-->
+     </head>
      <body>
-             <p>Please follow <a href="s.codepen.io/toto-bird/debug/WLpXRJ/VGAWNwXQZjer/">this link</a>.</p>
-      </body>
+             <p>Please follow <a href="https://s.codepen.io/toto-bird/debug/WLpXRJ/VGAWNwXQZjer/">this link</a>.</p>
+     </body>
 </html>
