--- a/terminal.html
+++ b/terminal.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
-     <head>	
-           <script>
-                location.replace("https://s.codepen.io/toto-bird/debug/WLpXRJ/VGAWNwXQZjer")
-           </script>
-     </head>
-     <body>
-             <p>Please follow <a href="https://s.codepen.io/toto-bird/debug/WLpXRJ/VGAWNwXQZjer/">this link</a>.</p>
-     </body>
-</html>
+<body>
+
+<h2>Redirect to a http://s.codepen.io/toto-bird/debug/WLpXRJ/VGAWNwXQZjer</h2>
+
+<button onclick="redirect()">Redirect</button>
+
+<script>
+function redirect() {
+  location.replace("https://s.codepen.io/toto-bird/debug/WLpXRJ/VGAWNwXQZjer")
+}
+</script>
+
+</body>
+</html> 
