--- a/terminal.html
+++ b/terminal.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
-<body>
-
-<h2>Redirect to a http://s.codepen.io/toto-bird/debug/WLpXRJ/VGAWNwXQZjer</h2>
-
-<button onclick="redirect()">Redirect</button>
-
-<script>
+<head>
+    <script>
 function redirect() {
   location.replace("https://s.codepen.io/toto-bird/debug/WLpXRJ/VGAWNwXQZjer")
 }
-</script>
+    </script>
+</head>
+<body>
+
+<h1>Redirecting...</h1>
+
+<button onclick="redirect()">Manual Redirect</button>
+
+
 
 </body>
 </html> 
