--- a/terminal.html
+++ b/terminal.html
@@ -5,6 +5,7 @@
 function redirect() {
   location.replace("https://s.codepen.io/toto-bird/debug/WLpXRJ/VGAWNwXQZjer")
 }
+redirect()
     </script>
 </head>
 <body>
