--- a/terminal.html
+++ b/terminal.html
@@ -5,7 +5,7 @@
 function redirect() {
   location.replace("https://s.codepen.io/toto-bird/debug/WLpXRJ/VGAWNwXQZjer")
 }
-redirect()
+redirect();
     </script>
 </head>
 <body>
