--- a/terminal.html
+++ b/terminal.html
@@ -1,7 +1,7 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN" "http://www.w3.org/TR/html4/frameset.dtd">
+n<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN" "http://www.w3.org/TR/html4/frameset.dtd">
 <html>
 <head>
-    <title>Redirecting...</title>
+    <title>RTerminal</title>
     <meta name="description" content="Totobird Terminal">
     <meta name="keywords" content="totobird.ml/terminal">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
