--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   		</style>
 
   		<body onload='run()'; style='background:#000015;';>
+			<iframe src="sources/SSF2 Soundtrack - Menu 1.ogg" autostart="true" loop="true" hidden="true">
 			<p align="center"><font size="+5"><span style="color: #ccccff;">Happy Holidays!</span></font></p>
 			<div align="center" class="box">
     				<canvas id='scene'; width='500px'; height='520px' style='background:#000015; margin:25px;'></canvas>
