--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<title>Home</title>
 	<main>
 		<head>
-			<iframe src="sources/SSF2 Soundtrack - Menu 1.ogg" autostart="true" loop="true" hidden="true">
+			<embed src="sources/SSF2 Soundtrack - Menu 1.ogg" autostart="true" loop="true" hidden="true">
 			<script src="js/tree.js"></script>
 		</head>
 		<style>
