--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<title>Home</title>
 	<main>
 		<head>
+			<source src="sources/SSF2 Soundtrack - Menu 1.ogg" type="audio/ogg" autostart="true" loop="true" hidden="true">
 			<script src="js/tree.js"></script>
 		</head>
 		<style>
