--- a/mc.html
+++ b/mc.html
@@ -1,6 +1,21 @@
 <DOCTYPE html>
 <head>
+    <style>
+        div.box {
+            position: relative;
+			margin: 0 auto;
+			border: 100px;
+			text-align: center;
+			display: block;
+			width: 550px;
+			height: 575px;
+			background-color: #33DD33;
+        }
+    </style>
+</head>
+<body>
     <form method="get" action="../download/§4Unfair §EDon't §6Take §CDamage§7.zip/">
         <p align="center"><font size="+3">Unfair Don't Take Damage</font><br><font size="+1">Created By: Conure_Steve</font></p>
         <button type="submit">Download</button>
     </form>
+</body>
