--- a/mc.html
+++ b/mc.html
@@ -1,16 +1,10 @@
 <DOCTYPE html>
 <head>
     <style>
-        div.box {
-            position: relative;
-			margin: 0 auto;
-			border: 100px;
-			text-align: center;
-			display: block;
-			width: 550px;
-			height: 575px;
-			background-color: #33DD33;
-        }
+	button {
+   	    margin:0 auto;
+            display:block;
+	}
     </style>
 </head>
 <body>
