--- a/mc.html
+++ b/mc.html
@@ -1,4 +1,5 @@
 <DOCTYPE html>
+<title>Conure_Steve Maps MC</title>
 <head>
     <style>
 	button {
@@ -9,9 +10,9 @@
 	}
     </style>
 </head>
-<body>
+<body bcolor>
     <form method="get" action="../download/§4Unfair §EDon't §6Take §CDamage§7.zip/">
-      	<p align="center"><font size="+3">Unfair Don't Take Damage</font><br><font size="+1">Created By: Conure_Steve</font></p>
+      	<p align="center"><font size="+3"><span style="color: #ccccff;">Unfair Don't Take Damage</span></font><br><font size="+1">Created By: Conure_Steve</font></p>
         <button type="submit">Download</button>
     </form>
 </body>
