--- a/mc.html
+++ b/mc.html
@@ -12,7 +12,7 @@
 </head>
 <body bgcolor="#000015">
     <form method="get" action="../download/§4Unfair §EDon't §6Take §CDamage§7.zip/">
-      	<p align="center"><font size="+3"><span style="color: #ccccff;">Unfair Don't Take Damage</span></font><br><font size="+1">Created By: Conure_Steve</font></p>
+      	<p align="center"><font size="+3"><span style="color: #ccccff;">Unfair Don't Take Damage</font><br><font size="+1">Created By: Conure_Steve</span></font></p>
         <button type="submit">Download</button>
     </form>
 </body>
