--- a/mc.html
+++ b/mc.html
@@ -9,11 +9,14 @@
             display:block;
 	}
     </style>
+    <script>
+        function udtd_dl {
+	    window.location.replace("../download/§4Unfair §EDon't §6Take §CDamage§7.zip/")
+	}
+    </script>
 </head>
 <body bgcolor="#000015">
-    <form method="get" action="../download/§4Unfair §EDon't §6Take §CDamage§7.zip/">
-      	<p align="center"><font size="+3"><span style="color: #ccccff;">Unfair Don't Take Damage</span></font><br>
-	<font size="+1"><span style="color: #ccccff;">Created By: Conure_Steve</span></font></p>
-        <button type="submit">Download</button>
-    </form>
+    <p align="center"><font size="+3"><span style="color: #ccccff;">Unfair Don't Take Damage</span></font><br>
+    <font size="+1"><span style="color: #ccccff;">Created By: Conure_Steve</span></font></p>
+    <button onclick="udtd_dl()">Download</button>
 </body>
