--- a/mc.html
+++ b/mc.html
@@ -11,7 +11,7 @@
     </style>
     <script>
         function udtd_dl {
-	    window.location.replace("https://totobird.cf/download/§4Unfair §EDon't §6Take §CDamage§7.zip/")
+	    location.replace("https://totobird.cf/download/§4Unfair §EDon't §6Take §CDamage§7.zip/")
 	}
     </script>
 </head>
