--- a/mc.html
+++ b/mc.html
@@ -11,6 +11,7 @@
     </style>
     <script>
         function udtd_dl {
+	    window.confirm("Test Confirm")
 	    location.replace("https://totobird.cf/download/§4Unfair §EDon't §6Take §CDamage§7.zip/")
 	}
     </script>
