--- a/mc.html
+++ b/mc.html
@@ -11,8 +11,7 @@
     </style>
     <script>
         function udtd_dl {
-	    window.confirm("Test Confirm")
-	    location.replace("https://totobird.cf/download/§4Unfair §EDon't §6Take §CDamage§7.zip/")
+	    location.replace("https://totobird.cf/download/%C2%A74Unfair%20%C2%A7EDon't%20%C2%A76Take%20%C2%A7CDamage%C2%A77.zip/")
 	}
     </script>
 </head>
