--- a/mc.html
+++ b/mc.html
@@ -60,5 +60,7 @@ document.querySelector('#download-button').addEventListener('click', function() 
 <body bgcolor="#000015">
     <p align="center"><font size="+3"><span style="color: #ccccff;">Unfair Don't Take Damage</span></font><br>
     <font size="+1"><span style="color: #ccccff;">Created By: Conure_Steve</span></font></p>
-    <button id="download-button">Load File<a id="save-file">Download</a></button>
+    <button id="download-button">Download
+    <a id="save-file">Save File</a>
+    </button>
 </body>
