--- a/mc.html
+++ b/mc.html
@@ -2,12 +2,12 @@
 <title>Conure_Steve Maps MC</title>
 <head>
     <style>
-	button {
+	/*button {
 	    width:250px;
 	    height:125px;
    	    margin:0 auto;
             display:block;
-	}
+	}*/
     </style>
     <script>
 // This will hold the the file as a local object URL
