--- a/mc.html
+++ b/mc.html
@@ -1,4 +1,19 @@
 <head>
+	<style>
+		#download-button {
+			background-color: white;
+			color: #2980b9;
+			border: 2px solid #2980b9;
+			font-family: inherit;
+			outline: none;
+			min-width: 100px;
+			padding: 10px;
+			border-radius: 2px;
+			cursor: pointer;
+			display: block;
+			margin: 0 auto;
+		}
+	</style>
 	<script>
 		var _OBJECT_URL;
 
