--- a/mc.html
+++ b/mc.html
@@ -66,11 +66,11 @@ body {
 <body>
 
 <div id="demo-container">
-	<button id="download-button">Load File</button>
+	<button id="download-button">Download File</button>
 	<div id="download-ui-container">
-		<div id="start-download">Starting Download..</div>
+		<div id="start-download">Starting Download...</div>
 		<div id="download-progress-container"><div id="download-progress"></div></div>
-		<a id="save-file">SDownload</a>
+		<a id="save-file">Save File</a>
 	</div>
 </div>
 
