--- a/mc.html
+++ b/mc.html
@@ -17,7 +17,22 @@ body {
 }
 
 #download-button {
-	background-color: white;
+	background-color: "#000015";
+	color: #2980b9;
+	border: 2px solid #2980b9;
+	font-family: inherit;
+	outline: none;
+	min-width: 100px;
+	padding: 10px;
+	font-size: inherit;
+	border-radius: 2px;
+	cursor: pointer;
+	display: block;
+	margin: 0 auto;
+}
+
+#savefile-button {
+	background-color: "#000015";
 	color: #2980b9;
 	border: 2px solid #2980b9;
 	font-family: inherit;
@@ -70,7 +85,7 @@ body {
 	<div id="download-ui-container">
 		<div id="start-download">Starting Download...</div>
 		<div id="download-progress-container"><div id="download-progress"></div></div>
-		<a id="save-file">Save File</a>
+		<button id="savefile-button">Save File</button>
 	</div>
 </div>
 
