--- a/mc.html
+++ b/mc.html
@@ -31,21 +31,6 @@ body {
 	margin: 0 auto;
 }
 
-#savefile-button {
-	background-color: "#000015";
-	color: #2980b9;
-	border: 2px solid #2980b9;
-	font-family: inherit;
-	outline: none;
-	min-width: 100px;
-	padding: 10px;
-	font-size: inherit;
-	border-radius: 2px;
-	cursor: pointer;
-	display: block;
-	margin: 0 auto;
-}
-
 #start-download {
 	text-align: center;
 	display: none;
@@ -81,11 +66,11 @@ body {
 <body>
 
 <div id="demo-container">
-	<button id="download-button">Download File</button>
+	<button id="download-button">Load File</button>
 	<div id="download-ui-container">
 		<div id="start-download">Starting Download...</div>
 		<div id="download-progress-container"><div id="download-progress"></div></div>
-		<button id="savefile-button">Save File</button>
+		<a id="save-file">Download File</a>
 	</div>
 </div>
 
