--- a/mc.html
+++ b/mc.html
@@ -68,7 +68,7 @@ body {
 <div id="demo-container">
 	<button id="download-button">Load File</button>
 	<div id="download-ui-container">
-		<div id="start-download">Starting Download...</div>
+		<div id="start-download">Loading File...</div>
 		<div id="download-progress-container"><div id="download-progress"></div></div>
 		<a id="save-file">Download File</a>
 	</div>
