--- a/mc.html
+++ b/mc.html
@@ -64,7 +64,7 @@ body {
 </head>
 
 <body>
-
+<p><font size="+3"><span style="color: #ccccff">Unfair Don't Take Damage</font><font size="+1">Created By: Conure_Steve</font></span></p>
 <div id="demo-container">
 	<button id="download-button">Load File</button>
 	<div id="download-ui-container">
