--- a/mc.html
+++ b/mc.html
@@ -63,7 +63,7 @@ body {
 </style>
 </head>
 
-<body>
+<body bgcolor="#000015">
 <p align="center"><font size="+3"><span style="color: #ccccff">Unfair Don't Take Damage</span></font><br><font size="+1"><span style="color: #ccccff">Created By: Conure_Steve</span></font></p>
 <div id="demo-container">
 	<button id="download-button">Load File</button>
